--- a/index.html
+++ b/index.html
@@ -28,37 +28,18 @@
   <button onclick="translate()">Translate</button>
 
   <div id="results"></div>
+    const response = await fetch("https://api.openai.com/v1/chat/completions", {
+      method: "POST",
+      headers: {
+        "Content-Type": "application/json",
+        Authorization: `Bearer ${process.env.OPENAI_API_KEY}`
+      },
+      body: JSON.stringify(payload)
+    });
 
-  <script>
-    async function translate() {
-      const text = document.getElementById('inputText').value;
-      const direction = document.getElementById('direction').value;
-      const gender = document.getElementById('gender').value;
-      const res = await fetch('/.netlify/functions/translate', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ text, direction, gender })
-      });
-      const data = await res.json();
-      const results = document.getElementById('results');
-      results.innerHTML = '';
-      Object.entries(data).forEach(([key, val]) => {
-        const card = document.createElement('div');
-        card.className = 'card';
-        card.innerHTML = `<b>${key.toUpperCase()}</b>: ${val} 
-          <button onclick="copyText('${val}')">Copy</button>
-          <button onclick="speakText('${val}')">Speak</button>`;
-        results.appendChild(card);
-      });
+    if (!response.ok) {
+      const errText = await response.text();
+      return { statusCode: response.status, body: JSON.stringify({ error: errText }) };
     }
-    function copyText(text) {
-      navigator.clipboard.writeText(text);
-      alert('Copied: ' + text);
-    }
-    function speakText(text) {
-      const msg = new SpeechSynthesisUtterance(text);
-      speechSynthesis.speak(msg);
-    }
-  </script>
-</body>
+ </body>
 </html>
